--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "deepmerge": "^3.3.0",
     "dompurify": "^1.0.11",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "js-yaml": "^3.13.1",
     "jsdom": "^15.1.1",
     "marked": "^0.7.0",
