--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/morgan": "^1.9.2",
     "autoprefixer": "^9.8.0",
     "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "compression": "^1.7.4",
     "concurrently": "^6.2.0",
     "cookie-parser": "^1.4.5",
