[change] Made one-token header keyword configurable

--- a/internals/config/default.yml
+++ b/internals/config/default.yml
@@ -8,6 +8,7 @@ settings:
   subscriptions: false
   payment_iframe: false
   payment_requires_internet: false
+  passwordless_auth_token_name: "sesame"
 
 # configuration variables for the server app
 server:
